= CHANGELOG

== Unreleased

 * For big endian input, return `WKBReadError::UnsupportedBigEndian`, rather than panic

== v0.5.0 (2020-04-25)

 * Switch `geo` dependency to the `geo-types` crate (v0.4)
 * Support GeometryCollections (PR #4) from tyrylu
 * Upgrade `geo-types` to v0.5

== v0.3.0 

 * Upgraded dependencies:
   * `geo` from 0.7 to 0.10
   * `num-traits` from 0.1 to 0.2