@@ -3,6 +3,7 @@
 == Unreleased
 
  * For big endian input, return `WKBReadError::UnsupportedBigEndian`, rather than panic
+ * Writing a geometry now can returns a `WKBWriteError`.
 
 == v0.5.0 (2020-04-25)
 
